# chat-mcp-google

./: .env.template  .gitignore  CHANGELOG.md  README.md  app.py  calendar_server.py  contacts_server.py  docs_server.py  drive_server.py  get_google_app_key.py  get_google_drive_access_token.py  get_google_maps_api_key.py  gmail_server.py  maps_server.py  pyproject.toml  readme-id.md  requirements-dev.txt  requirements.txt
docs/: README.md  mcp-server-addition-checklist.md  mcp-server-addition-runbook.md  pseudocode-chat-app.md  pseudocode-mcp-calendar.md  pseudocode-mcp-contacts.md  pseudocode-mcp-docs.md  pseudocode-mcp-drive.md  pseudocode-mcp-gmail.md  pseudocode-mcp-maps.md  time-complexity-analysis.md
docs/mcp-servers/: README.md  calendar.md  contacts.md  docs.md  drive.md  gmail.md  maps.md
src/chat_google/: __init__.py  chat_service.py  constants.py  models.py  ui.py
src/chat_google/mcp_servers/: __init__.py  calendar_server.py  contacts_server.py  docs_server.py  drive_server.py  gmail_server.py  maps_server.py
tests/: conftest.py  test_calendar_server.py  test_chat_service.py  test_constants.py  test_contacts_server.py  test_docs_server.py  test_docs_server_smoke.py  test_drive_server.py  test_drive_server_smoke.py  test_gmail_server.py  test_live_smoke_no_ui.py  test_maps_server.py  test_maps_server_smoke.py
