[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chat-google"
version = "1.2.0"
requires-python = ">=3.10"
dependencies = [
    "gradio>=6.5.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
    "mcp[cli]>=1.26.0",
    "caldav>=1.3.6",
    "vobject>=0.9.9",
    "google-genai>=1.0.0",
    "pydantic>=2.10.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live_smoke: runs real non-UI smoke query against configured model/API",
]

